<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Traffic Sign Recognition</string>
    <string name="hello_world">Hello world!</string>
    <string name="description">Processed image</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_menu_activity">MainActivity</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="start_gallery">Start gallery</string>
    <string name="start_detection"><b>Start detection</b></string>
    <string name="location_activity">LocationActivity</string>
    <string name="processing">Processing...</string>
    <string name="enter_ip"><b>Enter server ip</b></string>
    <string name="enter_port"><b>Enter server port</b></string>
    <string name="set"><b>Set</b></string>
    <string name="back"><b>Return</b></string>
    
    <string name="connection_error_misconfigured">connection_error_misconfigured</string>
    <string name="connection_error_internal">connection_error_internal</string>
    <string name="connection_error_invalid_account">connection_error_invalid_account</string>
    <string name="connection_error_license_check_failed">connection_error_license_check_failed</string>
    <string name="connection_error_network">connection_error_network</string>
    <string name="connection_error_needs_resolution">connection_error_needs_resolution</string>
    <string name="connection_error_disabled">connection_error_disabled</string>
    <string name="connection_error_invalid">connection_error_invalid</string>
    <string name="connection_error_missing">connection_error_missing</string>
    <string name="connection_error_outdated">connection_error_outdated</string>
    <string name="connection_error_sign_in_required">connection_error_sign_in_required</string>
    <string name="connection_error_unknown">connection_error_unknown</string>
    <string name="latitude_longitude">latitude_longitude</string>
    <string name="resolved">resolved</string>
    <string name="connected">connected</string>
    <string name="no_resolution">no_resolution</string>
    <string name="disconnected">disconnected</string>
    <string name="unknown_activity_request_code">unknown_activity_request_code</string>
    <string name="play_services_available">play_services_available</string>
    <string name="location_updated">location_updated</string>

</resources>